--- a/itests/pom.xml
+++ b/itests/pom.xml
@@ -19,13 +19,11 @@
   <parent>
     <groupId>org.apache.hive</groupId>
     <artifactId>hive</artifactId>
-    <version>2.1.0.2.6.0.0-598</version>
+    <version>2.2.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>org.apache.hive</groupId>
   <artifactId>hive-it</artifactId>
-  <version>2.1.0.2.6.0.0-598</version>
   <packaging>pom</packaging>
   <name>Hive Integration - Parent</name>
 
@@ -52,7 +50,7 @@
       <id>spark-test</id>
       <activation>
 	<property>
-          <name>runSparkTests</name>
+          <name>!skipSparkTests</name>
 	</property>
       </activation>
       <modules>
