--- a/metastore/pom.xml
+++ b/metastore/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.apache.hive</groupId>
     <artifactId>hive</artifactId>
-    <version>2.1.0.2.6.0.0-598</version>
+    <version>2.2.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -44,11 +44,6 @@
       <artifactId>hive-shims</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.hive</groupId>
-      <artifactId>hive-common</artifactId>
-      <version>${project.version}</version>
-    </dependency>
 	<dependency>
 		<groupId>javolution</groupId>
 		<artifactId>javolution</artifactId>
@@ -64,6 +59,11 @@
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
       <version>${protobuf.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${commons-lang3.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hbase</groupId>
@@ -145,6 +145,22 @@
       <groupId>org.antlr</groupId>
       <artifactId>antlr-runtime</artifactId>
       <version>${antlr.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-auth</artifactId>
+      <version>${hadoop.version}</version>
+      <optional>true</optional>
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commmons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -330,12 +346,6 @@
           <include>package.jdo</include>
         </includes>
       </resource>
-      <resource>
-        <directory>${basedir}/src/main/resources</directory>
-        <includes>
-          <include>plugin.xml</include>
-        </includes>
-      </resource>
     </resources>
     <plugins>
       <!-- plugins are always listed in sorted order by groupId, artifectId -->
@@ -351,27 +361,6 @@
         </executions>
         <configuration>
           <sourceDirectory>${basedir}/src/java</sourceDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>${maven.jar.plugin.version}</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            </manifest>
-            <manifestEntries>
-              <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
-              <Bundle-Name>Apache Hive MSSQLServer DataNucleus plug-in</Bundle-Name>
-              <Bundle-SymbolicName>org.apache.hadoop.hive.metastore;singleton:=true</Bundle-SymbolicName>
-              <Bundle-Vendor>Apache Hive</Bundle-Vendor>
-              <Bundle-Version>${project.version}</Bundle-Version>
-              <Bundle-Localization>plugin</Bundle-Localization>
-              <Require-Bundle>org.datanucleus.store.rdbms</Require-Bundle>
-            </manifestEntries>
-          </archive>
         </configuration>
       </plugin>
       <plugin>
