--- a/storage-api/pom.xml
+++ b/storage-api/pom.xml
@@ -25,20 +25,20 @@
 
   <groupId>org.apache.hive</groupId>
   <artifactId>hive-storage-api</artifactId>
-  <version>2.3.0-SNAPSHOT</version>
+  <version>2.3.1</version>
   <packaging>jar</packaging>
   <name>Hive Storage API</name>
 
   <properties>
     <commons-lang.version>2.6</commons-lang.version>
     <guava.version>14.0.1</guava.version>
-    <hadoop.version>2.7.2</hadoop.version>
+    <hadoop.version>2.8.0</hadoop.version>
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.10</slf4j.version>
   </properties>
 
   <dependencies>
-    <!-- compile inter-project -->
+    <!-- inter-project -->
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
